--- a/reflectable/pubspec.yaml
+++ b/reflectable/pubspec.yaml
@@ -4,16 +4,16 @@ description: >
   reflection to a transformer generated specialization with the same
   behavior. The generated code does not use dynamic reflection and thus
   improves the performance of (esp. dart2js) generated code.
-version: 1.0.2
+version: 1.0.2+an
 author: The Dart Team <dart@google.com>
 homepage: https://www.github.com/dart-lang/reflectable
 environment:
   sdk: '>=1.12.0 <2.0.0'
 dependencies:
-  analyzer: '>=0.27.2 <0.30.0'
+  analyzer: '>=0.30.0 <0.31.0'
   barback: ^0.15.0
   code_transformers: '>=0.4.1 <0.6.0'
-  dart_style: ^0.2.0
+  dart_style: ^1.0.7
   glob: ^1.1.0
   logging: ^0.11.0
   path: ^1.2.0
